--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
-        android:name="io.flutter.app.FlutterApplication"
         android:label="screen_example"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="flutterEmbedding" android:value="2"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
